--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -6,8 +6,8 @@ destination_layout: publication
 ---
 <center>
   <div id = "after_submission">          
-      <form onsubmit="saveFile(); after_submission(); check_existence('/publications.html','topic')">
-        <div><input type="text" id="topic" placeholder="Enter Title" required="required"/></div>
+      <form onsubmit="saveFile(); after_submission();">
+        <div><input type="text" id="topic" placeholder="Enter Title" required="required" onchange="check_existence('topic')"/></div>
 
         <div><input type="text" id="publishers" placeholder="Published in" /></div>
         
@@ -209,9 +209,9 @@ destination_layout: publication
     return(String(sessionStorage.getItem(file)));
   }
 
-  function check_existence(page_link, id){
-      let s = getdata(page_link);
-      titles = s.split(",")
+  let title_string = getdata(page_link);
+  function check_existence(id){
+      titles = title_string.split(",")
       if(titles.includes(document.getElementById(id).value)){
         alert("Title already exist! please choose another title.")
         document.getElementById(id).value = '';
