fix funding form

--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -63,6 +63,7 @@ destination_layout: funds
           </center>
       </form>
     </div>
+  </center>
   <script>
   window.onload = function() {
     if(!window.location.hash) {
