--- a/_forms/news_form.html
+++ b/_forms/news_form.html
@@ -7,8 +7,8 @@ destination_layout: news
 
 <center>
 <div id = "after_submission">
-
-    <div><input type="text" id="topic" placeholder="Enter Title" required="required"/></div>
+  <form onsubmit="saveFile(); after_submission();">
+    <div><input type="text" id="topic" placeholder="Enter Title" required="required" onchange="check_existence('topic')"/></div>
 
     <div>
         <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
@@ -74,11 +74,12 @@ destination_layout: news
         <div><iframe src="../edit.html" style="border:0px; width:100%; min-height:50vh;"></iframe></div>
     </div></div>  
 
-        <center>
-        <div>
-            <input type="button" value="Generate MD File" onclick="saveFile(); after_submission()"/>
-        </div>
-        </center>
+    <center>
+      <div>
+          <input type="submit" value="Generate MD File" class="sectionbutton"/>
+      </div>
+      </center>
+  </form>
 </div>
 </center>
 
@@ -225,6 +226,15 @@ destination_layout: news
             }
         });
         return(String(sessionStorage.getItem(file)));
+    }
+
+    let title_string = getdata("/news.html");
+    function check_existence(id){
+        titles = title_string.split(",")
+        if(titles.includes(document.getElementById(id).value)){
+          alert("Title already exist! please choose another title.")
+          document.getElementById(id).value = '';
+        }
     }
 </script>
   
