--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -47,7 +47,7 @@ destination_layout: talk
 
         <center>
         <div>
-            <input type="button" value="Generate MD File" onclick="saveFile(); after_submission()" class="sectionbutton"/>
+            <input type="submit" value="Generate MD File" class="sectionbutton"/>
         </div>
         </center>
       </form>
