--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -221,7 +221,7 @@ destination_layout: post
                 sessionStorage.setItem(file, page1X);
             }
             else{
-                // window.location.reload();
+                window.location.reload();
             }
         });
         return(String(sessionStorage.getItem(file)));
