--- a/create_form.html
+++ b/create_form.html
@@ -5,14 +5,14 @@ layout: default
 <nav id="navbar">
     <header>CS4SG Organization</header>
     <ul>
-      <li><a class="nav-link" href="/#Introduction">Introduction</a></li>
-      <li><a class="nav-link" href="/#add_info">Adding information to the website</a></li>
-      <li><a class="nav-link" href="/#forms">Forms</a></li>
-      <li><a class="nav-link" href="\/resources.html" target="_blank">Resources</a></li>
+      <li><a class="nav-link" href="./#Introduction">Introduction</a></li>
+      <li><a class="nav-link" href="./#add_info">Adding information to the website</a></li>
+      <li><a class="nav-link" href="./#forms">Forms</a></li>
+      <li><a class="nav-link" href="/resources.html" target="_blank">Resources</a></li>
       <li><a class="nav-link" href="https://docs.google.com/document/d/1_oJGjgSufz_YQ7Z0g6GItEA46z9770ZcZO6dj3ZuDnA/edit?usp=sharing" target="_blank">Website Architecture</a></li>
-      <li><a class="nav-link" href="/create_form.html">How to create a Form?</a></li>
-      <li><a class="nav-link" href="/create_section">How to create a new section in the website?</a></li>
-      <li><a class="nav-link" href="/#help">Help&nbsp;<i class="fa fa-question-circle"></i></a></li>
+      <li><a class="nav-link" href="./create_form.html">How to create a Form?</a></li>
+      <li><a class="nav-link" href="./create_section">How to create a new section in the website?</a></li>
+      <li><a class="nav-link" href="./#help">Help&nbsp;<i class="fa fa-question-circle"></i></a></li>
     </ul>
 </nav>
 
