--- a/_forms/people_form.html
+++ b/_forms/people_form.html
@@ -19,10 +19,10 @@ destination_layout: people
   </div>
 
   <div>
-    <input type="text" id="fname" placeholder="Enter first name (can include middle name/initial after first if desired)" required="required"/>
+    <input type="text" id="fname" placeholder="Enter first name (can include middle name/initial after first if desired)" required="required" onchange="check_existence()"/>
   </div>
   
-  <div><input type="text" id="lname" placeholder="Enter last name" required="required"/></div>
+  <div><input type="text" id="lname" placeholder="Enter last name" required="required" onchange="check_existence()"/></div>
 
   <div>
     <input type="text" id="designation" placeholder="Enter your title and department/major, e.g., Associate Professor, Computer Science // Student, Sociology // PhD Student, Social Work " required="required"/>
@@ -201,5 +201,33 @@ function save_courses(){
     document.getElementById("courses_added").appendChild(node);
     document.getElementById("courses").value = "";
   }
+}
+
+function getdata(file){
+        $.get(file, function(result){
+            var obj = $(result).find('script');
+            var page1X = $(result).find('div.myData').data('x');
+            if(page1X != null){
+                sessionStorage.setItem(file, page1X);
+            }
+            else{
+                window.location.reload();
+            }
+        });
+        return(String(sessionStorage.getItem(file)));
+}
+
+let title_string = getdata("https://cs4sg.github.io/people.html");
+  function check_existence(){
+    firstname = document.getElementById("fname").value
+    lastname = document.getElementById("lname").value
+    if(firstname != "" && lastname != ""){
+      titles = title_string.split(",")
+      if(titles.includes(firstname+" "+lastname)){
+        alert("Title already exist! please choose another title.")
+        firstname = '';
+        lastname = '';
+    }
+    }
 }
 </script>
