--- a/_forms/people_form.html
+++ b/_forms/people_form.html
@@ -237,3 +237,5 @@ let title_string = getdata("https://cs4sg.github.io/people.html");
     }
 }
 </script>
+
+<!-- Developer: Prakshal Jain || Contact: prakshal@buffalo.edu -->
