--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -187,3 +187,5 @@ let title_string = getdata("/projects.html");
       }
 }
 </script>
+
+<!-- Developer: Prakshal Jain || Contact: prakshal@buffalo.edu -->
