--- a/form_template.html
+++ b/form_template.html
@@ -63,3 +63,5 @@ destination_layout:
         document.getElementById("after_submission").innerHTML = "<br><br><center><table width='80%'><h2>Thank you for submitting your Code.</h2><br><br> To add it to the CS4SG Code Section, just upload the file to the destination folder. Here is the link for the folder <br><a href = '{{ page.upload }}' target='_blank'>{{ page.upload }}</a></table></center>"
     }
 </script>
+
+<!-- Developer: Prakshal Jain || Contact: prakshal@buffalo.edu -->
