--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -16,7 +16,7 @@ destination_layout: publication
         <div><div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
         <center><h5>Choose Authors</h5></center><div id="peoples" class="hiddenCB"></div><input type="text" id="new_person" placeholder="Enter a new Person" style="width:50%"> &nbsp; 
         <input type="button" onclick="add_new('new_person','people', 'new_people_added');" value="Add Person" style="width:10%"> &nbsp; OR  &nbsp;
-        <input type="button" onclick="window.open('\/people_form.html')" value="Add to Organization">
+        <input type="button" onclick="window.open('https://cs4sg.github.io/cs4sg_organization.github.io//forms/people_form.html#loaded')" value="Add to Organization">
         <br /><br />
         <ul id="new_people_added" style="font-weight: normal; text-align: left;"><LH><b>Added non-organization Authors:</b></LH></ul>
         </div></div>
