--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -30,7 +30,7 @@ destination_layout: project
 <div>
 <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
 <center><h5>Choose People related to this Project</h5></center><div id="peoples" class="hiddenCB"></div><input type="text" id="new_person" placeholder="Enter a new Person" style="width:50%"> &nbsp; <input type="button" onclick="add_new();" value="Add Person" style="width:10%"> &nbsp; OR  &nbsp;
-<input type="button" onclick="window.open('https://cs4sg.github.io/cs4sg_organization.github.io//forms/people_form.html#loaded')" value="Add to Organization"><br />
+<input type="button" onclick="window.open('forms/people_form.html')" value="Add to Organization"><br />
 <ul id="new_people_added" style="font-weight: normal; text-align: left; padding: 10px;"><LH><b>Added external People:</b></LH></ul>
 <small style="text-align:left"><font color="red">*</font>&nbsp;Click on the names that appear below "Added external People" to remove them from the list.</small><br/>
 <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
