--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -29,7 +29,12 @@ destination_layout: project
 
 <div>
 <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
-<center><h5>Choose People related to this Project</h5></center><div id="peoples" class="hiddenCB"></div><input type="text" id="new_person" placeholder="Enter a new Person" style="width:50%"> &nbsp; <input type="button" onclick="add_new();" value="Add Person" style="width:10%"> &nbsp; OR  &nbsp;
+<center><h5>Choose People related to this Project</h5></center><div id="peoples" class="hiddenCB"></div>
+<hr/>
+<center><h5>Enter external people related to this Project</h5></center>
+<div><input type="text" id="first_name" placeholder="First Name" style="width:45%">&nbsp;<input type="text" id="last_name" placeholder="Last_Name" style="width:45%"></div>
+<div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%"></div>
+<input type="button" onclick="add_new();" value="Add Person"> &nbsp; OR  &nbsp;
 <input type="button" onclick="window.open('forms/people_form.html')" value="Add to Organization"><br />
 <ul id="new_people_added" style="font-weight: normal; text-align: left; padding: 10px;"><LH><b>Added external People:</b></LH></ul>
 <small style="text-align:left"><font color="red">*</font>&nbsp;Click on the names that appear below "Added external People" to remove them from the list.</small><br/>
@@ -145,19 +150,22 @@ console.log(people_checked)
 }
 return people_checked
 }
+
 function add_new(){
-var n = document.getElementById("new_person").value
-if(n != ""){
-people.push(n);
+var n = document.getElementById("first_name").value
+var m = document.getElementById("last_name").value
+var link = document.getElementById("person_url").value
+if(n != "" && m != ""){
+people.push(n+" "+m+(link != "") ? "&nbsp;&nbsp;<a href = '"+ link +"' target='_blank'><i class='bx bx-link-external'></i></a>" : "");
 var node = document.createElement("li");
-node.onclick = function() {this.parentNode.removeChild(this);};
-var textnode = document.createTextNode(n);
-node.appendChild(textnode);
+node.innerHTML = (link != "") ? n+" "+m+"&nbsp;&nbsp;("+ link+")" : n+" "+m;
 document.getElementById("new_people_added").appendChild(node);
-document.getElementById("new_person").value = "";
+document.getElementById("first_name").value = "";
+document.getElementById("last_name").value = "";
+document.getElementById("person_url").value = "";
 }
 else{
-
+alert("Please enter a firstname and / or lastname")
 }
 }
 
