--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -32,7 +32,7 @@ destination_layout: project
 <center><h5>Choose People related to this Project</h5></center><div id="peoples" class="hiddenCB"></div>
 <hr/>
 <center><h5>Enter external people related to this Project</h5></center>
-<div><input type="text" id="first_name" placeholder="First Name" style="width:45%">&nbsp;<input type="text" id="last_name" placeholder="Last_Name" style="width:45%"></div>
+<div><input type="text" id="first_name" placeholder="First Name" style="width:45%">&nbsp;<input type="text" id="last_name" placeholder="Last Name" style="width:45%"></div>
 <div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%"></div>
 <input type="button" onclick="add_new();" value="Add Person"> &nbsp; OR  &nbsp;
 <input type="button" onclick="window.open('forms/people_form.html')" value="Add to Organization"><br />
