--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -155,13 +155,21 @@ var n = document.getElementById("first_name").value
 var m = document.getElementById("last_name").value
 var link = document.getElementById("person_url").value
 if(n != "" && m != ""){
-people.push(n+" "+m+(link != "") ? "&nbsp;&nbsp;<a href = '"+ link +"' target='_blank'><i class='bx bx-link-external'></i></a>" : "");
-var node = document.createElement("li");
-node.innerHTML = (link != "") ? n+" "+m+"&nbsp;&nbsp;("+ link+")" : n+" "+m;
-document.getElementById("new_people_added").appendChild(node);
-document.getElementById("first_name").value = "";
-document.getElementById("last_name").value = "";
-document.getElementById("person_url").value = "";
+  titles = title_string.split(",")
+  if(titles.includes(firstname+" "+lastname)){
+    alert("You are already added to CS4SG Organization. Please select the name from above")
+    document.getElementById("first_name").value = '';
+    document.getElementById("last_name").value = '';
+  }
+  else{
+    people.push(n+" "+m+(link != "") ? "&nbsp;&nbsp;<a href = '"+ link +"' target='_blank'><i class='bx bx-link-external'></i></a>" : "");
+    var node = document.createElement("li");
+    node.innerHTML = (link != "") ? n+" "+m+"&nbsp;&nbsp;("+ link+")" : n+" "+m;
+    document.getElementById("new_people_added").appendChild(node);
+    document.getElementById("first_name").value = "";
+    document.getElementById("last_name").value = "";
+    document.getElementById("person_url").value = "";
+  }
 }
 else{
 alert("Please enter a firstname and / or lastname")
@@ -169,7 +177,8 @@ alert("Please enter a firstname and / or lastname")
 }
 
 // /people.html
-var people = tagger(getdata("https://cs4sg.github.io/people.html"), 'peoples', "v")
+var peop = getdata("https://cs4sg.github.io/people.html")
+var people = tagger(peop, 'peoples', "v")
 
 function getdata(file){
   $.get(file, function(result){
