--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -150,6 +150,8 @@ console.log(people_checked)
 return people_checked
 }
 
+function arrayRemove(arr, value) { return arr.filter(function(ele){ return ele != value; });}
+
 var peop = getdata("/people.html")
 function add_new(){
 var n = document.getElementById("first_name").value
@@ -164,9 +166,11 @@ if(n != "" && m != ""){
     document.getElementById("person_url").value = "";
   }
   else{
-    people.push((link != "") ? "<a href = '"+ link +"' target='_blank'>"+n+" "+m+"</a>" : n+" "+m);
+    var toadd = (link != "") ? "<a href = '"+ link +"' target='_blank'>"+n+" "+m+"</a>" : n+" "+m
+    people.push(toadd);
     var node = document.createElement("li");
-    node.onclick = function() {this.parentNode.removeChild(this);};
+    node.onclick = function() {this.parentNode.removeChild(this); people = arrayRemove(people, toadd);};
+    console.log(people);
     node.innerHTML = (link != "") ? n+" "+m+"&nbsp;&nbsp;("+ link+")" : n+" "+m;
     document.getElementById("new_people_added").appendChild(node);
     document.getElementById("first_name").value = "";
