--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -22,7 +22,7 @@ destination_layout: talk
       <div>
       <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;"><center><h5>Choose Speaker</h5></center><div id="orator"></div>
       <input type="text" id="new_orator" placeholder="Enter a new Speaker" style="width:50%"> &nbsp; <input type="button" onclick="add_new_orator();" value="Add Orator" style="width:10%"> &nbsp; OR  &nbsp;
-      <input type="button" onclick="window.open('forms/people_form.html')" value="Add to Organization"><br />
+      <input type="button" onclick="window.open('/people_form.html')" value="Add to Organization"><br />
         <b>Added non-organization Speaker:</b>
         <label id="new_orator_added" style="font-weight: normal;"></label>
       </div></div>
