--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -42,13 +42,19 @@ destination_layout: funds
       </div></div>
   
       <div>
-      <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
-      <center><h5>Choose Related People</h5></center><div id="peoples" class="hiddenCB"></div><input type="text" id="new_person" placeholder="Enter a new Person" style="width:50%"> &nbsp; 
-      <input type="button" onclick="add_new('new_person','people', 'new_people_added');" value="Add Person" style="width:10%"> &nbsp; OR  &nbsp;
-      <input type="button" onclick="window.open('/people_form.html')" value="Add to Organization">
-      <br /><br />
-      <ul id="new_people_added" style="font-weight: normal; text-align: left; padding: 10px;"><LH><b>Added non-organization Authors:</b></LH></ul>
-      </div></div>
+        <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
+        <center><h5>Choose People related to this Project</h5></center><div id="peoples" class="hiddenCB"></div>
+        <hr/>
+        <center><h5>Enter external people related to this Project</h5></center>
+        <div><input type="text" id="first_name" placeholder="First Name" style="width:45%">&nbsp;<input type="text" id="last_name" placeholder="Last Name" style="width:45%"></div>
+        <div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%"></div>
+        <input type="button" onclick="add_new();" value="Add Person"> &nbsp; OR  &nbsp;
+        <input type="button" onclick="window.open('/people_form.html')" value="Add to Organization"><br />
+        <ul id="new_people_added" style="font-weight: normal; text-align: left; padding: 10px;"><LH><b>Added external People:</b></LH></ul>
+        <small style="text-align:left"><font color="red">*</font>&nbsp;Click on the names that appear below "Added external People" to remove them from the list.</small><br/>
+        <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
+        </div>
+      </div>
   
       <div>
       <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
@@ -128,7 +134,7 @@ destination_layout: funds
       }
   
       var res_topics = tagger(getdata("/projects.html"), 'tagged', "t");
-      var people = tagger(getdata("/people.html"), 'peoples', "v");
+      var people = tagger(peop, 'peoples', "v");
   
       function tagger(t, inside, samp_func){
       var people_checked = []
@@ -163,21 +169,36 @@ destination_layout: funds
       return people_checked
     }
     
-      function add_new(id, list_name, ul_name){
-      var n = document.getElementById(id).value
-      if(n != ""){
-        eval(String(list_name)+".push('"+n+"')");
-          var node = document.createElement("li");
-          node.onclick = function() {this.parentNode.removeChild(this);};
-          var textnode = document.createTextNode(n);
-          node.appendChild(textnode);
-          document.getElementById(ul_name).appendChild(node);
-        document.getElementById(id).value = "";
-      }
-      else{
-  
-      }
+  var peop = getdata("/people.html")
+  function add_new(){
+  var n = document.getElementById("first_name").value
+  var m = document.getElementById("last_name").value
+  var link = document.getElementById("person_url").value
+  if(n != "" && m != ""){
+    titles = peop.split(",")
+    if(titles.includes(n+" "+m)){
+      alert("You are already added to CS4SG Organization. Please select the name from above")
+      document.getElementById("first_name").value = '';
+      document.getElementById("last_name").value = '';
+      document.getElementById("person_url").value = "";
     }
+    else{
+      var toadd = (link != "") ? "<a href = '"+ link +"' target='_blank'>"+n+" "+m+"</a>" : n+" "+m
+      people.push(toadd);
+      var node = document.createElement("li");
+      node.onclick = function() {this.parentNode.removeChild(this); people = arrayRemove(people, toadd);};
+      console.log(people);
+      node.innerHTML = (link != "") ? n+" "+m+"&nbsp;&nbsp;("+ link+")" : n+" "+m;
+      document.getElementById("new_people_added").appendChild(node);
+      document.getElementById("first_name").value = "";
+      document.getElementById("last_name").value = "";
+      document.getElementById("person_url").value = "";
+    }
+  }
+  else{
+  alert("Please enter a firstname and / or lastname")
+  }
+  }
 
     function getdata(file){
         $.get(file, function(result){
