--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -106,7 +106,7 @@ destination_layout: funds
           const duration = document.getElementById('valid').value
           const start = document.getElementById('start').value
           const fn = document.getElementById('fprincipal').value
-          const ln = document.getElementById('lprincipall').value
+          const ln = document.getElementById('lprincipal').value
           if(fn != "" && ln != ""){
             const lin  = document.getElementById('pi_url').value
             if(!people.contains(fn +" "+ ln)){
