--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -109,7 +109,7 @@ destination_layout: funds
           const ln = document.getElementById('lprincipal').value
           if(fn != "" && ln != ""){
             const lin  = document.getElementById('pi_url').value
-            if(!people.contains(fn +" "+ ln)){
+            if(!(people.contains(fn +" "+ ln))){
               people = people.push((link != "") ? "<a href = '"+lin+"' target='_blank'>"+fn +" "+ ln+'</a>&nbsp;(<i>Principal Investigator</i>)' : fn +" "+ ln+'&nbsp;(<i>Principal Investigator</i>)')
             }
             else{
