--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -105,12 +105,12 @@ destination_layout: funds
           const grant_notice = document.getElementById('grant_notice').value;
           const duration = document.getElementById('valid').value
           const start = document.getElementById('start').value
-          const fn = document.getElementById('fprincipal').value
-          const ln = document.getElementById('lprincipal').value
-          if(fn != "" && ln != ""){
-            const lin  = document.getElementById('pi_url').value
-            people = people.push((lin != "") ? "<a href = '"+lin+"' target='_blank'>"+fn +" "+ ln+'</a>&nbsp;(<i>Principal Investigator</i>)' : fn +" "+ ln+'&nbsp;(<i>Principal Investigator</i>)')
-          }
+          // const fn = document.getElementById('fprincipal').value
+          // const ln = document.getElementById('lprincipal').value
+          // if(fn != "" && ln != ""){
+          //   const lin  = document.getElementById('pi_url').value
+          //   people = people.push((lin != "") ? "<a href = '"+lin+"' target='_blank'>"+fn +" "+ ln+'</a>&nbsp;(<i>Principal Investigator</i>)' : fn +" "+ ln+'&nbsp;(<i>Principal Investigator</i>)')
+          // }
           const tagged = res_topics.toString();
           const tagged_people = people.toString();
           var msg = String(localStorage.getItem("saved_research_html"));
