--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -44,7 +44,7 @@ destination_layout: project
 <div>
 <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
     <h5>Project Description</h5>
-    <div><iframe src="../edit.html" style="border:0px; width:100%; min-height:50vh;"></iframe></div>
+    <div><textarea id="descrip" style="width:100%;" rows=13></textarea></iframe></div>
 </div></div>
 
 <center>
@@ -70,7 +70,7 @@ let saveFile = () => {
 const topic = document.getElementById('topic').value;
 const description = document.getElementById('description').value;
 const subheading = document.getElementById('subheading').value;
-var msg = String(localStorage.getItem("saved_research_html"));
+const msg = document.getElementById('descrip').value;
 
 // This variable stores all the data.
 let data = 
