--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -44,7 +44,7 @@ destination_layout: project
 <div>
 <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
     <h5>Project Description</h5>
-    <div><textarea id="descrip" style="width:100%;" rows=13></textarea></iframe></div>
+    <div><textarea id="descrip" style="width:100%;" rows=13></textarea></div>
 </div></div>
 
 <center>
