--- a/create_form.html
+++ b/create_form.html
@@ -12,6 +12,7 @@ layout: default
       <li><a class="nav-link" href="https://docs.google.com/document/d/1_oJGjgSufz_YQ7Z0g6GItEA46z9770ZcZO6dj3ZuDnA/edit?usp=sharing" target="_blank">Website Architecture</a></li>
       <li><a class="nav-link" href="./create_form.html">How to create a Form?</a></li>
       <li><a class="nav-link" href="./create_section">How to create a new section in the website?</a></li>
+      <li><a class="nav-link" href="./writing_md.html">How to create a Form?</a></li>
       <li><a class="nav-link" href="./#help">Help&nbsp;<i class="fa fa-question-circle"></i></a></li>
     </ul>
 </nav>
