--- a/_forms/code_form.html
+++ b/_forms/code_form.html
@@ -59,7 +59,11 @@ destination_layout: default
       <div>
         <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
             <h5>Code Description</h5>
-            <div><iframe src="../edit.html" style="border:0px; width:100%; min-height:50vh;"></iframe></div>
+            <div>
+              <div><textarea id="descrip" style="width:100%;" rows=12></textarea></div>
+              <small style="text-align:left"><font color="red">*</font>&nbsp;If you want to add some special formatting, please use Markdown formats.</small><br/>
+              <small style="text-align:left"><a href="../writing_md.html" target="_blank">Click here are most of the MD formattings you can use.</a></small>
+            </div>
         </div>
       </div> 
   
@@ -86,7 +90,7 @@ destination_layout: default
           const topic = document.getElementById('topic').value;
           save_link()
           const links = link_str.slice(2)
-          var msg = String(localStorage.getItem("saved_research_html"));
+          const msg = document.getElementById('descrip').value;
           
           // This variable stores all the data.
           let data = 
