--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -46,8 +46,8 @@ destination_layout: project
     <h5>Project Description</h5>
     <div><textarea id="descrip" style="width:100%;" rows=12></textarea></div>
     <small style="text-align:left"><font color="red">*</font>&nbsp;If you want to add some special formatting, please use Markdown formats.</small><br/>
-    <small style="text-align:left"><a href="./writing_md.html">Click here are most of the MD formattings you can use.</a></small>
-</div></div>
+    <small style="text-align:left"><a href="../writing_md.html" target="_blank">Click here are most of the MD formattings you can use.</a></small>
+  </div></div>
 
 <center>
 <div>
