--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -41,7 +41,11 @@ destination_layout: talk
       
     <div><div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
         <h5>Talk Description</h5>
-        <div><iframe src="../edit.html" style="border:0px; width:100%; min-height:50vh;"></iframe></div>
+        <div>
+          <div><textarea id="descrip" style="width:100%;" rows=12></textarea></div>
+          <small style="text-align:left"><font color="red">*</font>&nbsp;If you want to add some special formatting, please use Markdown formats.</small><br/>
+          <small style="text-align:left"><a href="../writing_md.html" target="_blank">Here are most of the MD formattings you can use.</a></small>
+        </div>
     </div></div>
 
 
@@ -69,7 +73,7 @@ destination_layout: talk
       const category = document.getElementById('category').value;
       var dates = document.getElementById("dts").value;
       
-      var msg = String(localStorage.getItem("saved_research_html"));
+      const msg = document.getElementById('descrip').value;
       var t = talker();
       if(t === ""){
         t = document.getElementById("new_orator").value
