--- a/_forms/code_form.html
+++ b/_forms/code_form.html
@@ -62,7 +62,7 @@ destination_layout: default
             <div>
               <div><textarea id="descrip" style="width:100%;" rows=12></textarea></div>
               <small style="text-align:left"><font color="red">*</font>&nbsp;If you want to add some special formatting, please use Markdown formats.</small><br/>
-              <small style="text-align:left"><a href="../writing_md.html" target="_blank">Click here are most of the MD formattings you can use.</a></small>
+              <small style="text-align:left"><a href="../writing_md.html" target="_blank">Here are most of the MD formattings you can use.</a></small>
             </div>
         </div>
       </div> 
