--- a/_forms/news_form.html
+++ b/_forms/news_form.html
@@ -77,7 +77,11 @@ destination_layout: news
     <div>
     <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
         <h5>News Description</h5>
-        <div><iframe src="../edit.html" style="border:0px; width:100%; min-height:50vh;"></iframe></div>
+        <div>
+          <div><textarea id="descrip" style="width:100%;" rows=12></textarea></div>
+          <small style="text-align:left"><font color="red">*</font>&nbsp;If you want to add some special formatting, please use Markdown formats.</small><br/>
+          <small style="text-align:left"><a href="../writing_md.html" target="_blank">Here are most of the MD formattings you can use.</a></small>
+        </div>
     </div></div>  
 
     <center>
@@ -107,7 +111,7 @@ destination_layout: news
           var article_url = document.getElementById('article_url').value;
           var event_date = document.getElementById('event_date').value;
           var location = document.getElementById('location').value;
-          var msg = String(localStorage.getItem("saved_research_html"));
+          const msg = document.getElementById('descrip').value;
           var mixed_talks = talks.concat(speech)
           
           // This variable stores all the data.
