--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -43,7 +43,11 @@ destination_layout: publication
         
       <div><div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
         <h5>Publication Abstract</h5>
-        <div><iframe src="../edit.html" style="border:0px; width:100%; min-height:50vh;"></iframe></div>
+        <div>
+          <div><textarea id="descrip" style="width:100%;" rows=12></textarea></div>
+          <small style="text-align:left"><font color="red">*</font>&nbsp;If you want to add some special formatting, please use Markdown formats.</small><br/>
+          <small style="text-align:left"><a href="../writing_md.html" target="_blank">Here are most of the MD formattings you can use.</a></small>
+        </div>
       </div></div>
   
       <center>
@@ -72,7 +76,7 @@ destination_layout: publication
           const dates = document.getElementById("dts").value
           save_link()
           const links = link_str.slice(2)
-          var msg = String(localStorage.getItem("saved_research_html"));
+          const msg = document.getElementById('descrip').value;
           
           // This variable stores all the data.
           let data = 
