--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -21,7 +21,7 @@ destination_layout: publication
         <div><input type="text" id="pu" placeholder="Enter website URL (if any)" style="width:90%"></div>
         <input type="button" onclick="add_new2();" value="Add Person"> &nbsp; OR  &nbsp;
         <input type="button" onclick="window.open('/people_form.html')" value="Add to Organization"><br />
-        <ul id="new_people_added" style="font-weight: normal; text-align: left; padding: 10px;"><LH><b>Added external Authors:</b></LH></ul>
+        <ul id="new_author_added" style="font-weight: normal; text-align: left; padding: 10px;"><LH><b>Added external Authors:</b></LH></ul>
         <small style="text-align:left"><font color="red">*</font>&nbsp;Click on the names that appear below "Added external People" to remove them from the list.</small><br/>
         <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
         </div></div>
@@ -239,7 +239,7 @@ if(n != "" && m != ""){
     node.onclick = function() {this.parentNode.removeChild(this); people = arrayRemove(people, toadd);};
     console.log(people);
     node.innerHTML = (link != "") ? n+" "+m+"&nbsp;&nbsp;("+ link+")" : n+" "+m;
-    document.getElementById("new_people_added").appendChild(node);
+    document.getElementById("new_author_added").appendChild(node);
     document.getElementById("fn").value = "";
     document.getElementById("ln").value = "";
     document.getElementById("pu").value = "";
