--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -21,6 +21,7 @@ destination_layout: talk
 
       <div>
       <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;"><center><h5>Choose Speaker</h5></center><div id="orator"></div><hr/>
+      <center><h5>Enter external Speaker</h5></center>
       <div><input type="text" id="first_name" placeholder="Enter a new Speaker" style="width:45%">&nbsp;<input type="text" id="last_name" placeholder="Last Name" style="width:45%"></div>
       <div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%"></div>
       <input type="button" onclick="add_new_orator();" value="Add Speaker" style="width:10%"> &nbsp; OR  &nbsp;
