Fixed Markdown line

--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -25,7 +25,7 @@ destination_layout: talk
       <div><input type="text" id="first_name" placeholder="Enter a new Speaker" style="width:45%">&nbsp;<input type="text" id="last_name" placeholder="Last Name" style="width:45%"></div>
       <div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%"></div>
       <input type="button" onclick="add_new_orator();" value="Add Speaker" style="width:10%"> &nbsp; OR  &nbsp;
-      <input type="button" onclick="window.open('/people_form.html')" value="Add to Organization"><br />
+      <input type="button" onclick="window.open('_forms/people_form.html')" value="Add to Organization"><br />
       <div style="font-weight: normal; text-align: left; padding: 10px;">
         <b>Added non-organization Speaker:</b>
         <label id="new_orator_added" style="font-weight: normal;"></label>
