Fixed Markdown line

--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -28,9 +28,9 @@ destination_layout: publication
   
         <div>
           <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
-          <center><h5>Choose People related to this Project</h5></center><div id="tagged_people" class="hiddenCB"></div>
+          <center><h5>Choose People related to this Publication</h5></center><div id="tagged_people" class="hiddenCB"></div>
           <hr/>
-          <center><h5>Enter external people related to this Project</h5></center>
+          <center><h5>Enter external people related to this Publication</h5></center>
           <div><input type="text" id="first_name" placeholder="First Name" style="width:45%">&nbsp;<input type="text" id="last_name" placeholder="Last Name" style="width:45%"></div>
           <div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%"></div>
           <input type="button" onclick="add_new();" value="Add Person"> &nbsp; OR  &nbsp;
