--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -46,10 +46,12 @@ destination_layout: publication
       <div>
       <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
         <center><h5>Choose Related Projects</h5></center><div id="tagged" class="hiddenCB"></div>
+        <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
       </div></div>
   
       <div><div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
         <center><h5>Choose Related Courses</h5></center><div id="tag_courses" class="hiddenCB"></div>
+        <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
       </div></div>
         
       <div><div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
