--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -45,6 +45,7 @@ destination_layout: funds
           <div>
           <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
           <center><h5>Choose related research projects</h5></center><div id="tagged" class="hiddenCB"></div>
+          <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
       </div></div>
   
       <div>
