--- a/_forms/news_form.html
+++ b/_forms/news_form.html
@@ -47,31 +47,37 @@ destination_layout: news
     <div>
     <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
     <center><h5>Choose Related Research Projects</h5></center><div id="tagged" class="hiddenCB"></div>
+    <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
     </div></div>
 
     <div>
     <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
     <center><h5>Choose Related Publications</h5></center><div id="publish" class="hiddenCB"></div>
+    <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
     </div></div> 
 
     <div>
     <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
     <center><h5>Choose Related Courses</h5></center><div id="tag_courses" class="hiddenCB"></div>
+    <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
     </div></div>  
 
     <div>
     <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
     <center><h5>Choose Related Internal Talks</h5></center><div id="talks" class="hiddenCB"></div>
+    <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
     </div></div>
 
     <div>
     <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
     <center><h5>Choose Related External Talks</h5></center><div id="speech" class="hiddenCB"></div>
+    <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
     </div></div>
     
     <div>
     <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
     <center><h5>Choose Related Fundings</h5></center><div id="funded" class="hiddenCB"></div>
+    <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
     </div></div>
     
     <div>
