--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -38,10 +38,12 @@ destination_layout: talk
     <div>
     <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
       <center><h5>Choose related Projects</h5></center><div id="tagged" class="hiddenCB"></div>
+      <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
     </div></div>
 
     <div><div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
       <center><h5>Choose related Resources</h5></center><div id="resource" class="hiddenCB"></div>
+      <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
     </div></div>
       
     <div><div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
