--- a/_forms/courses_form.html
+++ b/_forms/courses_form.html
@@ -99,7 +99,7 @@ destination_layout: default
             "tagged_projects: "+res_topics.toString()+"\n"+
             "course_webpages: "+links+"\n"+
             "key: "+topic+"\n"+
-            "abstract: "+msg+"\n"+"---"
+            "description: "+msg+"\n"+"---"
 
 
 
