--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ layout: default
                 <li>{{ form.title }}: <a href="{{ form.upload }}" target="_blank">{{ form.upload }}</a></li>
               {% endfor %}
             </ol>
-            <p>If you do not have access to upload the file to the destination folder, please contact <a href="mailto:cse-dept@buffalo.edu">cse-dept@buffalo.edu</a></p>
+            <p>If you do not have access to upload the file to the destination folder, please contact <a href="mailto:kjoseph@buffalo.edu">kjoseph@buffalo.edu</a></p>
             <center><a href="./assets/images/help_img2.jpg" target="_blank"><img src="./assets/images/help_img2.jpg" alt="Steps after submitting the form" class="help_img"></a></center>
           </li>
           <li>
