fixed Key People Form

--- a/_forms/people_form.html
+++ b/_forms/people_form.html
@@ -134,7 +134,7 @@ window.onload = function() {
             "link: "+link+"\n"+
             "image: "+img_link+"\n"+
             "social: "+s+"\n"+
-            "key: "+fname+" "+lname+"\n"+
+            "key: "+lname+" "+fname+"\n"+
             "---"+"\n\n"     
         // Convert the text to BLOB.
         const textToBLOB = new Blob([data], { type: 'text/plain' });
