--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -107,7 +107,7 @@ destination_layout: talk
         
         // Convert the text to BLOB.
         const textToBLOB = new Blob([data], { type: 'text/plain' });
-        const sFileName = topic+'.md';	   // The file to save the data.
+        const sFileName = encodeURIComponent(topic)+'.md';	   // The file to save the data.
 
         let newLink = document.createElement("a");
         newLink.download = sFileName;
