--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -139,7 +139,7 @@ destination_layout: funds
           
       // Convert the text to BLOB.
       const textToBLOB = new Blob([data], { type: 'text/plain' });
-      const sFileName = title+'.md';	   // The file to save the data.
+      const sFileName = encodeURIComponent(topic)+'.md';	   // The file to save the data.
   
       let newLink = document.createElement("a");
       newLink.download = sFileName;
