Affiliated UB Faculty

--- a/_forms/people_form.html
+++ b/_forms/people_form.html
@@ -11,7 +11,7 @@ destination_layout: people
   <div>
       <select id="category">
           <option selected value="">-- Select your Category --</option>
-          <option value="UB faculty">UB Faculty</option>
+          <option value="Affiliated UB Faculty">Affiliated UB Faculty</option>
           <option value="External collaborator">External Collaborator</option>
           <option value="Former student">Former Student</option>
           <option value="Current student">Current Student</option>
